<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Black Jack</string>
    <string name="bienvenue">BIENVENUE</string>
    <string name="txt">txt</string>
    <string name="black">Black</string>
    <string name="jack">Jack</string>
    <string name="commencer">Commencer</string>
    <string name="activity2">ACTIVITY2</string>
    <string name="Aide">Aide</string>
    <string name="pr_nom">/Prénom</string>
    <string name="Prénom">Prénom</string>
    <string name="Nom">Nom de famille</string>
    <string name="Homme">Homme</string>
    <string name="logo">logo</string>
    <string name="nom">Nom</string>
    <string name="homme" tools:ignore="DuplicateDefinition">Homme</string>
    <string name="femme" tools:ignore="DuplicateDefinition">Femme</string>
</resources>